* Limit membership visibility based on user * add debug tools * update admin page * add 'approved_by' to memberships
